--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -2,4 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kakaovx.practice.presentation">
 
+    <application>
+        <activity android:name=".ui.DetailActivity" />
+    </application>
 </manifest>
